--- a/springboot-ssm/src/main/resources/application.properties
+++ b/springboot-ssm/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server.port=80
+server.port=9999
 
 logging.level.org.springframework=DEBUG
 #springboot mybatis
 #jiazai mybaties peizhiwenjian
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
-mybatis.config-location=classpath:mapper/config/sqlMapConfig.xml
-mybatis.type-aliases-package=com.mwb.bean
+mybatis.mapperLocations=classpath:mapper/*Mapper.xml
+mybatis.configLocation=classpath:mapper/config/sqlMapConfig.xml
+mybatis.typeAliasesPackage=com.mwb.bean
 
 #data resources
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.datasource.url = jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8
-spring.datasource.data-username=root
-spring.datasource.data-password=root
+spring.datasource.username=root
+spring.datasource.password=root
